--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar">Location: Belgium</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Fruitl</a>
+            </div>
+
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#about">Location: Belgium</a>
+                    </li>
+                    <li><a href="#services">My Account</a>
+                    </li>
+                    <li><a href="#contact">More Feautre Creep</a>
+                    </li>
+                </ul>
             </div>
 
 		</div><!-- end nav containter -->
@@ -32,16 +40,95 @@
 
 <div class="row fr_push">
 
-<div class="col-md-3 fr_item">
+<div class="col-md-3 ">
+
+<div class="fr_item">
 	<figure>
-	<img src="assets/imgs/48.png">
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
 	<figcaption>
 	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a>
+	<a href="#">Receipes</a><br>
 	<a href="#">Nutritional Facts</a>
 	</figcaption>
 	</figure>
+	</div>
 </div>
+<div class="col-md-3">
+<div class="fr_item">
+	<figure>
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
+	<figcaption>
+	<h3>Veggie Title</h3>
+	<a href="#">Receipes</a><br>
+	<a href="#">Nutritional Facts</a>
+	</figcaption>
+	</figure>
+	</div>
+</div>
+<div class="col-md-3">
+<div class="fr_item">
+	<figure>
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
+	<figcaption>
+	<h3>Veggie Title</h3>
+	<a href="#">Receipes</a><br>
+	<a href="#">Nutritional Facts</a>
+	</figcaption>
+	</figure>
+	</div>
+</div>
+
+<div class="col-md-3">
+<div class="fr_item">
+	<figure>
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
+	<figcaption>
+	<h3>Veggie Title</h3>
+	<a href="#">Receipes</a><br>
+	<a href="#">Nutritional Facts</a>
+	</figcaption>
+	</figure>
+	</div>
+</div>
+
+<div class="col-md-3">
+<div class="fr_item">
+	<figure>
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
+	<figcaption>
+	<h3>Veggie Title</h3>
+	<a href="#">Receipes</a><br>
+	<a href="#">Nutritional Facts</a>
+	</figcaption>
+	</figure>
+	</div>
+</div>
+
+<div class="col-md-3">
+<div class="fr_item">
+	<figure>
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
+	<figcaption>
+	<h3>Veggie Title</h3>
+	<a href="#">Receipes</a><br>
+	<a href="#">Nutritional Facts</a>
+	</figcaption>
+	</figure>
+	</div>
+</div>
+
 
 
 </div>
