Full bleed image tryout.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div class="row fr_push">
 
-<div class="col-md-3 ">
+<div class="col-md-3 col-xs-6 fr_div ">
 
 <div class="fr_item">
 	<figure>
@@ -55,7 +55,7 @@
 	</figure>
 	</div>
 </div>
-<div class="col-md-3">
+<div class="col-md-3 col-xs-6 fr_div">
 <div class="fr_item">
 	<figure>
 	<div>
@@ -69,22 +69,7 @@
 	</figure>
 	</div>
 </div>
-<div class="col-md-3">
-<div class="fr_item">
-	<figure>
-	<div>
-		<img src="assets/imgs/48.png">
-	</div>
-	<figcaption>
-	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
-	</figcaption>
-	</figure>
-	</div>
-</div>
-
-<div class="col-md-3">
+<div class="col-md-3 col-xs-6 fr_div">
 <div class="fr_item">
 	<figure>
 	<div>
@@ -99,7 +84,7 @@
 	</div>
 </div>
 
-<div class="col-md-3">
+<div class="col-md-3 col-xs-6 fr_div">
 <div class="fr_item">
 	<figure>
 	<div>
@@ -114,7 +99,7 @@
 	</div>
 </div>
 
-<div class="col-md-3">
+<div class="col-md-3 col-xs-6 fr_div">
 <div class="fr_item">
 	<figure>
 	<div>
@@ -128,6 +113,70 @@
 	</figure>
 	</div>
 </div>
+
+<div class="col-md-3 col-xs-6 fr_div">
+<div class="fr_item">
+	<figure>
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
+	<figcaption>
+	<h3>Veggie Title</h3>
+	<a href="#">Receipes</a><br>
+	<a href="#">Nutritional Facts</a>
+	</figcaption>
+	</figure>
+	</div>
+</div>
+
+<div class="col-md-3 col-xs-6 fr_div">
+<div class="fr_item">
+	<figure>
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
+	<figcaption>
+	<h3>Veggie Title</h3>
+	<a href="#">Receipes</a><br>
+	<a href="#">Nutritional Facts</a>
+	</figcaption>
+	</figure>
+	</div>
+</div>
+
+<div class="col-md-3 col-xs-6 fr_div">
+<div class="fr_item">
+	<figure>
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
+	<figcaption>
+	<h3>Veggie Title</h3>
+	<a href="#">Receipes</a><br>
+	<a href="#">Nutritional Facts</a>
+	</figcaption>
+	</figure>
+	</div>
+</div>
+
+<div class="col-md-3 col-xs-6 fr_div">
+<div class="fr_item">
+	<figure>
+	<div>
+		<img src="assets/imgs/48.png">
+	</div>
+	<figcaption>
+	<h3>Veggie Title</h3>
+	<a href="#">Receipes</a><br>
+	<a href="#">Nutritional Facts</a>
+	</figcaption>
+	</figure>
+	</div>
+</div>
+
+
+
+
 
 
 
