--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div class="row fr_push">
 
-<div class="col-md-3 col-xs-6 fr_div ">
+<div class="col-md-3 fr_div">
 
 <div class="fr_item">
 	<figure>
@@ -48,133 +48,16 @@
 		<img src="assets/imgs/48.png">
 	</div>
 	<figcaption>
-	<h3>Veggie Title</h3>
 	<a href="#">Receipes</a><br>
 	<a href="#">Nutritional Facts</a>
 	</figcaption>
+	<div class="fr_title">
+	Veggie Title
+	</div>
 	</figure>
-	</div>
-</div>
-<div class="col-md-3 col-xs-6 fr_div">
-<div class="fr_item">
-	<figure>
-	<div>
-		<img src="assets/imgs/48.png">
-	</div>
-	<figcaption>
-	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
-	</figcaption>
-	</figure>
-	</div>
-</div>
-<div class="col-md-3 col-xs-6 fr_div">
-<div class="fr_item">
-	<figure>
-	<div>
-		<img src="assets/imgs/48.png">
-	</div>
-	<figcaption>
-	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
-	</figcaption>
-	</figure>
-	</div>
 </div>
 
-<div class="col-md-3 col-xs-6 fr_div">
-<div class="fr_item">
-	<figure>
-	<div>
-		<img src="assets/imgs/48.png">
-	</div>
-	<figcaption>
-	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
-	</figcaption>
-	</figure>
-	</div>
 </div>
-
-<div class="col-md-3 col-xs-6 fr_div">
-<div class="fr_item">
-	<figure>
-	<div>
-		<img src="assets/imgs/48.png">
-	</div>
-	<figcaption>
-	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
-	</figcaption>
-	</figure>
-	</div>
-</div>
-
-<div class="col-md-3 col-xs-6 fr_div">
-<div class="fr_item">
-	<figure>
-	<div>
-		<img src="assets/imgs/48.png">
-	</div>
-	<figcaption>
-	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
-	</figcaption>
-	</figure>
-	</div>
-</div>
-
-<div class="col-md-3 col-xs-6 fr_div">
-<div class="fr_item">
-	<figure>
-	<div>
-		<img src="assets/imgs/48.png">
-	</div>
-	<figcaption>
-	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
-	</figcaption>
-	</figure>
-	</div>
-</div>
-
-<div class="col-md-3 col-xs-6 fr_div">
-<div class="fr_item">
-	<figure>
-	<div>
-		<img src="assets/imgs/48.png">
-	</div>
-	<figcaption>
-	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
-	</figcaption>
-	</figure>
-	</div>
-</div>
-
-<div class="col-md-3 col-xs-6 fr_div">
-<div class="fr_item">
-	<figure>
-	<div>
-		<img src="assets/imgs/48.png">
-	</div>
-	<figcaption>
-	<h3>Veggie Title</h3>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
-	</figcaption>
-	</figure>
-	</div>
-</div>
-
-
 
 
 
