Updates to behaviour.

--- a/index.html
+++ b/index.html
@@ -40,28 +40,23 @@
 
 <div class="row fr_push">
 
-<div class="col-md-3 fr_div">
+<div class="col-md-3 col-xs-6 fr_div nopadding">
 
 <div class="fr_item">
 	<figure>
-	<div>
+	<div class="fr_imgholder">
 		<img src="assets/imgs/48.png">
 	</div>
+
 	<figcaption>
-	<a href="#">Receipes</a><br>
-	<a href="#">Nutritional Facts</a>
+	<h3>Asparagus</h3>
+	<span class="glyphicon glyphicon-plus white"></span>
+
 	</figcaption>
-	<div class="fr_title">
-	Veggie Title
-	</div>
+	
 	</figure>
+	</div>
 </div>
-
-</div>
-
-
-
-
 
 </div>
 
