Added Fruit page from Signor Loucas

--- a/index.html
+++ b/index.html
@@ -36,12 +36,43 @@
 		<img src="assets/imgs/48.png">
 	</div>
 
-	<figcaption>
+	<figcaption onClick="showFruitDetail();">
 	<h3>Asparagus</h3>
 	<span class="glyphicon glyphicon-plus white"></span>
 	</figcaption>
 	</figure>
 	</div>
+</div>
+</div>
+
+<div id="fr_details" class="row fr_push">
+	
+ 
+	<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+	<div class="fr_detail_title">
+ 	<span class="glyphicon glyphicon-remove white" onClick="showFruitDetail()"></span>
+ 		<h1>Apricot</h1>
+ 	</div>	
+    			<div class="fruit-attributes">
+    				<p class="lead">A relative of the peach, nectarine, plum and cherry, apricots are fragrant, with a soft, velvety skin that ranges from pale yellow to deep orange. Inside there's a large kernel that will fall out easily if the flesh is ripe. Apricots need a warm climate to thrive - in the summer most come from hot European countries, and there's also a short winter season for apricots grown in Chile and South Africa.</p>
+    			</div>
+    			<div class="fruit-attributes">
+    				<h4>Choosing it</h4>
+    				<p>An apricot's colour is not always a reliable guide to flavour, but steer clear of very pale varieties, and always avoid wrinkled or blemished skins. The flesh should feel moderately firm with some give.</p>
+    			</div>
+    			<div class="fruit-attributes">
+    				<h4>Preparing it</h4>
+    				<p>Halve by running a blade around the kernel following the line of the fruit's natural dimple, then gently twist apart and flip out the stone. Brush the cut sides with lemon juice to prevent the flesh from discolouring.</p>
+    			</div>
+    			<div class="fruit-attributes">
+					<h4>Storing it</h4>
+					<p>In tarts and crumbles; poached and served with double cream; or use to make jam, compote or chutneys.</p>
+				</div>
+    			<div class="fruit-attributes">
+					<h4>Cooking it</h4>
+					<p>In tarts and crumbles; poached and served with double cream; or use to make jam, compote or chutneys.</p>
+				</div>
+    		</div>
 </div>
 
 </div>
